--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -36,9 +36,10 @@ name = "datafusion_sql"
 path = "src/lib.rs"
 
 [features]
-default = ["unicode_expressions", "unparser"]
+default = ["unicode_expressions", "unparser", "recursive-protection"]
 unicode_expressions = []
 unparser = []
+recursive-protection = ["recursive"]
 
 [dependencies]
 arrow = { workspace = true }
@@ -48,7 +49,7 @@ datafusion-common = { workspace = true, default-features = true }
 datafusion-expr = { workspace = true }
 indexmap = { workspace = true }
 log = { workspace = true }
-recursive = { workspace = true }
+recursive = { version = "0.1.1", optional = true }
 regex = { workspace = true }
 sqlparser = { workspace = true }
 
