--- a/datafusion/functions-table/Cargo.toml
+++ b/datafusion/functions-table/Cargo.toml
@@ -46,6 +46,7 @@ datafusion-expr = { workspace = true }
 datafusion-physical-plan = { workspace = true }
 parking_lot = { workspace = true }
 paste = "1.0.14"
+futures = "0.3.31"
 
 [dev-dependencies]
 arrow = { workspace = true, features = ["test_utils"] }
