--- a/datafusion/expr/Cargo.toml
+++ b/datafusion/expr/Cargo.toml
@@ -36,8 +36,6 @@ name = "datafusion_expr"
 path = "src/lib.rs"
 
 [features]
-default = ["recursive-protection"]
-recursive-protection = ["recursive"]
 
 [dependencies]
 arrow = { workspace = true }
@@ -50,7 +48,7 @@ datafusion-functions-window-common = { workspace = true }
 datafusion-physical-expr-common = { workspace = true }
 indexmap = { workspace = true }
 paste = "^1.0"
-recursive = { version = "0.1.1", optional = true }
+recursive = { workspace = true }
 serde_json = { workspace = true }
 sqlparser = { workspace = true }
 
