--- a/datafusion/optimizer/Cargo.toml
+++ b/datafusion/optimizer/Cargo.toml
@@ -35,10 +35,6 @@ workspace = true
 name = "datafusion_optimizer"
 path = "src/lib.rs"
 
-[features]
-default = ["recursive-protection"]
-recursive-protection = ["recursive"]
-
 [dependencies]
 arrow = { workspace = true }
 chrono = { workspace = true }
@@ -48,7 +44,7 @@ datafusion-physical-expr = { workspace = true }
 indexmap = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
-recursive = { version = "0.1.1", optional = true }
+recursive = { workspace = true }
 regex = { workspace = true }
 regex-syntax = "0.8.0"
 
