--- a/datafusion/physical-optimizer/Cargo.toml
+++ b/datafusion/physical-optimizer/Cargo.toml
@@ -31,10 +31,6 @@ rust-version = { workspace = true }
 [lints]
 workspace = true
 
-[features]
-default = ["recursive-protection"]
-recursive-protection = ["recursive"]
-
 [dependencies]
 arrow = { workspace = true }
 datafusion-common = { workspace = true, default-features = true }
@@ -44,7 +40,7 @@ datafusion-physical-expr = { workspace = true }
 datafusion-physical-plan = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
-recursive = { version = "0.1.1", optional = true }
+recursive = { workspace = true }
 
 [dev-dependencies]
 datafusion-expr = { workspace = true }
