--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -35,7 +35,7 @@ on:
     types: [created]
 
 permissions:
-  issues: write
+  pull-requests: write
 
 jobs:
   # Check issue comment and notify that extended tests are running
