--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           # Check out the pull request branch if triggered by a comment
-          ref: ${{ github.event_name == 'issue_comment' && github.event.issue.pull_request.head.ref || github.ref }}
+          ref: ${{ github.event_name == 'issue_comment' && github.head.ref || github.ref }}
           submodules: true
           fetch-depth: 1
       - name: Setup Rust toolchain
